--- a/site/css/style.css
+++ b/site/css/style.css
@@ -2,7 +2,7 @@ head{}
    body{}
       header{background-color:rgba(237, 6, 0, 0.5);width:70%}
       h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:left;font-size:150px;color:black}
-         h2{text-align:center;font-size:60px;font-family: 'Barlow Condensed', sans-serif;}
+         h2{text-align:left;font-size:60px;font-family: 'Barlow Condensed', sans-serif;}
 
 h3{background-color:rgba(0, 112, 197, 0.5);width:40%;color:black;
    font-family: 'Wire One', sans-serif;text-align:right;font-size:100px;float:right}
