--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,13 +1,13 @@
 head{}
    body{}
-      header{background-color:rgba(237, 6, 0, 0.5);width:70%}
+      header{width:50%;}
       h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:left;font-size:150px;color:black}
          h2{text-align:left;font-size:60px;font-family: 'Barlow Condensed', sans-serif;}
 
-h3{background-color:rgba(0, 112, 197, 0.5);width:40%;color:black;
+h3{background-color:rgba(0, 112, 197, 0.5);color:black;
    font-family: 'Wire One', sans-serif;text-align:right;font-size:100px;float:right}
 
-   main{padding:80px}
+   main{padding:80px;margin:auto}
 
       * {box-sizing: border-box;}
       * {box-sizing: border-box;}
