--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,11 +1,11 @@
 head{}
    body{}
-      header{width:50%;}
+      header{margin:auto}
       h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:left;font-size:150px;color:black}
          h2{text-align:left;font-size:60px;font-family: 'Barlow Condensed', sans-serif;}
 
 h3{background-color:rgba(0, 112, 197, 0.5);color:black;
-   font-family: 'Wire One', sans-serif;text-align:right;font-size:100px;float:right}
+   font-family: 'Wire One', sans-serif;text-align:right;font-size:100px;float:right;padding:10px}
 
    main{padding:80px;margin:auto}
 
