--- a/site/css/style.css
+++ b/site/css/style.css
@@ -2,10 +2,11 @@ head{}
    body{}
       header{margin:auto;padding:80px;width:60%}
       h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:right;font-size:150px;color:black}
-         h2{text-align:left;font-size:60px;font-family: 'Barlow Condensed', sans-serif;}
+         h2{text-align:right;font-size:60px;font-family: 'Barlow Condensed', sans-serif;padding:10px}
 
 h3{background-color:rgba(0, 112, 197, 0.5);color:black;margin:auto;
    font-family: 'Wire One', sans-serif;text-align:left;font-size:100px;padding:10px}
+   .shape{background-color:rgba(237, 6, 0, 0.5);width:200px}
 
    main{padding:80px;margin:auto}
 
