--- a/site/css/style.css
+++ b/site/css/style.css
@@ -6,7 +6,7 @@ head{}
 
 h3{background-color:rgba(0, 112, 197, 0.5);color:black;margin:auto;
    font-family: 'Wire One', sans-serif;text-align:left;font-size:100px;padding:10px}
-   .shape{background-color:rgba(237, 6, 0, 0.5);width:200px}
+   .shape{background-color:rgba(237, 6, 0, 0.5);width:200px;height:600px}
 
    main{padding:80px;margin:auto}
 
