--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,12 +1,12 @@
 head{}
    body{}
-      .shape{background-color:rgba(237, 6, 0, 0.5);width:200px;height:750px}
+      .shape{background-color:rgba(237, 6, 0, 0.5);width:200px;height:775px}
       header{margin:auto;padding:80px;width:60%}
       h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:left;font-size:150px;color:black}
          h2{text-align:right;font-size:50px;font-family: 'Barlow Condensed', sans-serif;padding:20px}
 
-h3{background-color:rgba(0, 112, 197, 0.5);color:black;margin:auto;position:fixed;
-   font-family: 'Barlow Condensed', sans-serif;text-align:center;font-size:100px;padding:10px}
+h3{background-color:rgba(0, 112, 197, 0.5);color:black;margin:auto;
+   font-family: 'Barlow Condensed', sans-serif;text-align:center;font-size:100px;margin-bottom:20px;margin-left:20px}
 
    main{padding:80px;margin:auto}
 
