--- a/site/css/style.css
+++ b/site/css/style.css
@@ -5,8 +5,8 @@ head{}
       h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:left;font-size:150px;color:black}
          h2{text-align:right;font-size:50px;font-family: 'Barlow Condensed', sans-serif;padding:20px}
 
-h3{background-color:rgba(0, 112, 197, 0.5);color:black;margin:auto;
-   font-family: 'Barlow Condensed', sans-serif;text-align:center;font-size:100px;margin-bottom:20px;margin-left:20px}
+h3{background-color:rgba(0, 112, 197, 0.5);color:white;margin:auto;
+   font-family: 'Barlow Condensed', sans-serif;text-align:center;font-size:100px;line-height:150px}
 
    main{padding:80px;margin:auto}
 
