--- a/site/css/style.css
+++ b/site/css/style.css
@@ -104,13 +104,13 @@ grid-row:12/15}
     grid-column:1/3;
     grid-row: 12/14;
    }
-      .eight {color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
-         grid-column: 4/5;
-         grid-row: 11/16;
+      .eight {text-align:right;color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
+         grid-column: 4/6;
+         grid-row: 13/16;
       }
    .eight:hover{background-color:#ED0600;color:#ED0600;
    grid-column:4/7;
-grid-row:12/16}
+grid-row:13/16}
    .p-8 {z-index:1;color:white;font-size:26px;
     grid-column:6/7;
     grid-row: 12/15;
