--- a/site/css/style.css
+++ b/site/css/style.css
@@ -136,6 +136,6 @@ grid-row:18/21}
     grid-column:4/6;
     grid-row: 18/20;
    }
-   footer{position:fixed}
+   footer{position:fixed;width:100%;height:150px}
       h3{background-color:rgba(0, 112, 197, 0.5);color:white;margin:auto;
          font-family: 'Barlow Condensed', sans-serif;text-align:center;font-size:100px;line-height:150px}
