--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,141 +1,302 @@
-head{}
-   body{}
-      .shape{background-color:rgba(237, 6, 0, 0.5);width:200px;height:775px}
-      header{margin:auto;padding:80px;width:60%}
-      h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:left;font-size:150px;color:black}
-         h2{text-align:right;font-size:50px;font-family: 'Barlow Condensed', sans-serif;padding:20px}
-
-h3{background-color:rgba(0, 112, 197, 0.5);color:white;margin:auto;
-   font-family: 'Barlow Condensed', sans-serif;text-align:center;font-size:100px;line-height:150px}
-
-   main{padding:80px;margin:auto}
-
-      * {box-sizing: border-box;}
-      * {box-sizing: border-box;}
-      .wrapper {
-        max-width: 1200px;
-        margin: 0 auto;
-      }
-.wrapper > div { padding: 1em;font-family: 'Barlow Condensed', sans-serif;
+.shape {
+  background-color: rgba(237, 6, 0, 0.5);
+  width: 200px;
+  height: 775px;
 }
+
+header {
+  margin: auto;
+  padding: 80px;
+  width: 60%;
+}
+
+h1 {
+  font-family: "Wire One", sans-serif;
+  margin: auto;
+  text-align: left;
+  font-size: 150px;
+  color: black;
+}
+
+h2 {
+  text-align: right;
+  font-size: 50px;
+  font-family: "Barlow Condensed", sans-serif;
+  padding: 20px;
+}
+
+h3 {
+  background-color: rgba(0, 112, 197, 0.5);
+  color: white;
+  margin: auto;
+  font-family: "Barlow Condensed", sans-serif;
+  text-align: center;
+  font-size: 100px;
+  line-height: 150px;
+}
+
+main {
+  padding: 80px;
+  margin: auto;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 .wrapper {
-        display: grid;
-        grid-template-columns: repeat(6, 1fr);
-        grid-gap: 0px;
-        grid-auto-rows: minmax(100px, auto);
-      }
-      .one {text-align:left;color:black;font-size:80px;background-color:rgba(0, 112, 197, 0.5);
-        grid-column:2/5;
-        grid-row: 1/2;
-      }
-   .one:hover{background-color:#0070C5;color:#0070C5;
-      grid-column:1/4;
-      grid-row:1/4}
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
-      .p-1 {z-index:1;color:white;font-size:26px;
-         grid-column:1/3;
-         grid-row: 2/4;}
+.wrapper > div {
+  padding: 1em;
+  font-family: "Barlow Condensed", sans-serif;
+}
 
-      .two {color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
-        grid-column: 4/5;
-        grid-row: 1/5;}
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 0px;
+  grid-auto-rows: minmax(100px, auto);
+}
 
-   .two:hover{background-color:#ED0600;color:#ED0600;
-      grid-column: 4/7;
-      grid-row: 1/3;}
+.one {
+  text-align: left;
+  color: black;
+  font-size: 80px;
+  background-color: rgba(0, 112, 197, 0.5);
+  grid-column: 2/5;
+  grid-row: 1/2;
+}
 
-     .p-2 {z-index:1;color:white;font-size:26px;
-      grid-column:5/7;
-      grid-row: 1/3;}
+.one:hover {
+  background-color: #0070C5;
+  color: #0070C5;
+  grid-column: 1/4;
+  grid-row: 1/4;
+}
 
-      .three {text-align:center;color:black;font-size:80px;background-color:rgba(0, 112, 197, 0.5);
-        grid-column: 5/7;
-        grid-row: 5/8;}
+.p-1 {
+  z-index: 1;
+  color: white;
+  font-size: 26px;
+  grid-column: 1/3;
+  grid-row: 2/4;
+}
 
-   .three:hover{background-color:#0070C5;color:#0070C5;
-      grid-column: 5/7;
-      grid-row: 3/8;}
-   .p-3 {z-index:1;color:white;font-size:26px;
-    grid-column:5/7;
-    grid-row: 3/5;}
+.two {
+  color: black;
+  font-size: 80px;
+  background-color: rgba(237, 6, 0, 0.5);
+  grid-column: 4/5;
+  grid-row: 1/5;
+}
 
-      .four {text-align:center;color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
-         grid-column: 2/5;
-        grid-row: 6/7;}
+.two:hover {
+  background-color: #ED0600;
+  color: #ED0600;
+  grid-column: 4/7;
+  grid-row: 1/3;
+}
 
-   .four:hover{background-color:#ED0600;color:#ED0600;
-   grid-column:2/5;
-grid-row:5/7;}
+.p-2 {
+  z-index: 1;
+  color: white;
+  font-size: 26px;
+  grid-column: 5/7;
+  grid-row: 1/3;
+}
 
-   .p-4 {z-index:1;color:white;font-size:26px;
-    grid-column:2/5;
-    grid-row: 5/6;
-   }
-      .five {text-align:center;color:black;font-size:80px;background-color:rgba(0, 112, 197, 0.5);
-         grid-column:2/3;
-         grid-row: 6/10;
-      }
-   .five:hover{background-color:#0070C5;color:#0070C5;
-   grid-column:1/3;
-grid-row:6/10}
-   .p-5 {z-index:1;color:white;font-size:26px;
-    grid-column:1/2;
-    grid-row: 6/10
-   }
-      .six {text-align:left;color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
-         grid-column: 3/5;
-        grid-row: 9/12;
-      }
-   .six:hover{background-color:#ED0600;color:#ED0600;
-   grid-column: 3/7;
-grid-row:9/12}
-   .p-6 {z-index:1;color:white;font-size:26px;
-    grid-column:5/7;
-    grid-row: 9/12;
-   }
-      .seven {;color:black;font-size:80px;background-color:rgba(0, 112, 197, 0.5);
-         grid-column: 1/5;
-         grid-row: 14/15;
-      }
-   .seven:hover{background-color:#0070C5;color:#0070C5;
-   grid-column:1/4;
-grid-row:12/15}
-   .p-7 {z-index:1;color:white;font-size:26px;
-    grid-column:1/3;
-    grid-row: 12/14;
-   }
-      .eight {text-align:right;color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
-         grid-column: 4/6;
-         grid-row: 13/16;
-      }
-   .eight:hover{background-color:#ED0600;color:#ED0600;
-   grid-column:4/7;
-grid-row:13/16}
-   .p-8 {z-index:1;color:white;font-size:26px;
-    grid-column:6/7;
-    grid-row: 13/15;
-   }
-      .nine {color:black;font-size:80px;background-color:rgba(0, 112, 197, 0.5);
-         grid-column: 4/7;
-         grid-row: 16/18;
-      }
-   .nine:hover{background-color:#0070C5;color:#0070C5;
-      grid-column:2/7;
-      grid-row:16/18
-   }
-   .p-9{z-index:1;color:white;font-size:26px;
-    grid-column:2/4;
-    grid-row:16/18;
-   }
-      .ten {color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
-         grid-column: 2/4;
-         grid-row: 18/21;
-      }
-   .ten:hover{background-color:#ED0600;color:#ED0600;
-   grid-column:2/6;
-grid-row:18/21}
-   .p-10{z-index:1;color:white;font-size:26px;
-    grid-column:4/6;
-    grid-row: 18/20;
-   }
-   footer{}
+.three {
+  text-align: center;
+  color: black;
+  font-size: 80px;
+  background-color: rgba(0, 112, 197, 0.5);
+  grid-column: 5/7;
+  grid-row: 5/8;
+}
+
+.three:hover {
+  background-color: #0070C5;
+  color: #0070C5;
+  grid-column: 5/7;
+  grid-row: 3/8;
+}
+
+.p-3 {
+  z-index: 1;
+  color: white;
+  font-size: 26px;
+  grid-column: 5/7;
+  grid-row: 3/5;
+}
+
+.four {
+  text-align: center;
+  color: black;
+  font-size: 80px;
+  background-color: rgba(237, 6, 0, 0.5);
+  grid-column: 2/5;
+  grid-row: 6/7;
+}
+
+.four:hover {
+  background-color: #ED0600;
+  color: #ED0600;
+  grid-column: 2/5;
+  grid-row: 5/7;
+}
+
+.p-4 {
+  z-index: 1;
+  color: white;
+  font-size: 26px;
+  grid-column: 2/5;
+  grid-row: 5/6;
+}
+
+.five {
+  text-align: center;
+  color: black;
+  font-size: 80px;
+  background-color: rgba(0, 112, 197, 0.5);
+  grid-column: 2/3;
+  grid-row: 6/10;
+}
+
+.five:hover {
+  background-color: #0070C5;
+  color: #0070C5;
+  grid-column: 1/3;
+  grid-row: 6/10;
+}
+
+.p-5 {
+  z-index: 1;
+  color: white;
+  font-size: 26px;
+  grid-column: 1/2;
+  grid-row: 6/10;
+}
+
+.six {
+  text-align: left;
+  color: black;
+  font-size: 80px;
+  background-color: rgba(237, 6, 0, 0.5);
+  grid-column: 3/5;
+  grid-row: 9/12;
+}
+
+.six:hover {
+  background-color: #ED0600;
+  color: #ED0600;
+  grid-column: 3/7;
+  grid-row: 9/12;
+}
+
+.p-6 {
+  z-index: 1;
+  color: white;
+  font-size: 26px;
+  grid-column: 5/7;
+  grid-row: 9/12;
+}
+
+.seven {
+  color: black;
+  font-size: 80px;
+  background-color: rgba(0, 112, 197, 0.5);
+  grid-column: 1/5;
+  grid-row: 14/15;
+}
+
+.seven:hover {
+  background-color: #0070C5;
+  color: #0070C5;
+  grid-column: 1/4;
+  grid-row: 12/15;
+}
+
+.p-7 {
+  z-index: 1;
+  color: white;
+  font-size: 26px;
+  grid-column: 1/3;
+  grid-row: 12/14;
+}
+
+.eight {
+  text-align: right;
+  color: black;
+  font-size: 80px;
+  background-color: rgba(237, 6, 0, 0.5);
+  grid-column: 4/6;
+  grid-row: 13/16;
+}
+
+.eight:hover {
+  background-color: #ED0600;
+  color: #ED0600;
+  grid-column: 4/7;
+  grid-row: 13/16;
+}
+
+.p-8 {
+  z-index: 1;
+  color: white;
+  font-size: 26px;
+  grid-column: 6/7;
+  grid-row: 13/15;
+}
+
+.nine {
+  color: black;
+  font-size: 80px;
+  background-color: rgba(0, 112, 197, 0.5);
+  grid-column: 4/7;
+  grid-row: 16/18;
+}
+
+.nine:hover {
+  background-color: #0070C5;
+  color: #0070C5;
+  grid-column: 2/7;
+  grid-row: 16/18;
+}
+
+.p-9 {
+  z-index: 1;
+  color: white;
+  font-size: 26px;
+  grid-column: 2/4;
+  grid-row: 16/18;
+}
+
+.ten {
+  color: black;
+  font-size: 80px;
+  background-color: rgba(237, 6, 0, 0.5);
+  grid-column: 2/4;
+  grid-row: 18/21;
+}
+
+.ten:hover {
+  background-color: #ED0600;
+  color: #ED0600;
+  grid-column: 2/6;
+  grid-row: 18/21;
+}
+
+.p-10 {
+  z-index: 1;
+  color: white;
+  font-size: 26px;
+  grid-column: 4/6;
+  grid-row: 18/20;
+}
